force-app/main/default/objects/Invoice__c/fields/Table_Position__c.field-meta.xml
<CustomField>
    <fullName>Table_Position__c</fullName>
    <formula>Order__r.Table__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Table Position</label>
    <type>Text</type>
</CustomField>