force-app/main/default/objects/Invoice__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <inlineHelpText>Suma de todos los sub-totales de los items relacionados</inlineHelpText>
    <label>Total</label>
    <summarizedField>Invoice_Item__c.Sub_Total__c</summarizedField>
    <summaryForeignKey>Invoice_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>